kubernetes/opencost.yaml
# <https://www.opencost.io/docs/>
---

# The namespace OpenCost will run in
apiVersion: v1
kind: Namespace
metadata:
    name: opencost
---

# Create a deployment for a single cost model pod
#
# See environment variables if you would like to add a Prometheus for
# cost model to read from for full functionality.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opencost
  namespace: opencost
  labels:
    app: opencost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opencost
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: opencost
    spec:
      restartPolicy: Always
      serviceAccountName: opencost
      containers:
        - image: quay.io/kubecost1/kubecost-cost-model:1.105.2
          name: opencost
          resources:
            requests:
              cpu: "10m"
              memory: "55M"
            limits:
              cpu: "999m"
              memory: "1G"
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsUser: 1001
        - image: quay.io/kubecost1/opencost-ui:1.105.2
          name: opencost-ui
          resources:
            requests:
              cpu: "10m"
              memory: "55M"
            limits:
              cpu: "999m"
              memory: "1G"
          imagePullPolicy: Always
---

# Expose the cost model with a service
#
# Without a Prometheus endpoint configured in the deployment,
# only opencost/metrics will have useful data as it is intended
# to be used as only an exporter.
kind: Service
apiVersion: v1
metadata:
  name: opencost
  namespace: opencost
spec:
  selector:
    app: opencost
  type: ClusterIP
  ports:
    - name: opencost
      port: 9003
      targetPort: 9003
    - name: opencost-ui
      port: 9090
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: prometheus
  name: opencost-prometheus-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - opencost-prometheus.cluster.noguchi.me
    secretName: opencost-prometheus-ingress-tls
  rules:
  - host: opencost-prometheus.cluster.noguchi.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-prometheus-server
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: opencost
  name: opencost-ingress
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-letsencrypt"
spec:
  ingressClassName: "nginx"
  tls:
  - hosts:
    - opencost.cluster.noguchi.me
    secretName: opencost-ingress-tls
  rules:
  - host: opencost.cluster.noguchi.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencost
            port:
              number: 9090
